<resources>
    <string name="app_name">Smart House</string>
    <string name="add_new_device">Add new device</string>
    <string name="sign_in">Sign in</string>
    <string name="no_devices">You don\'t have any devices</string>
    <string name="sign_out">Sign out</string>
    <string name="removeDevices">Remove all devices</string>
    <string name="tile_label">Toggle lights</string>
    <string name="home_activity_title">Connected devices</string>
    <string name="marketing_sign_in_message">Smart solution for the smart house.\n\nBuild the home of the Future: connect multiple smart devices and control them using this app.\n\nSign in to continue.</string>
</resources>
