<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_sign_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <FrameLayout
        android:layout_width="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        app:layout_heightPercent="50%"
        android:background="@color/colorAccent"
        android:fitsSystemWindows="true"
        android:id="@+id/frameLayout">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="@color/white"
            android:layout_margin="16dp"
            android:layout_gravity="bottom"/>
    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/marketing_sign_in_message"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_gravity="bottom"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="16dp"
        android:layout_below="@+id/frameLayout"
        android:layout_alignParentStart="true"
        android:id="@+id/textView2" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@color/white"
        android:layout_marginBottom="16dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"/>

</android.support.percent.PercentRelativeLayout>
